# poker-trainer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PHASE0.md  PHASE0_CLEANUP.md  PHASE0_COMPLETE.md  README.md  RECONCILIATION.md  ZONES.md
docs/: reconciliation_substrate_design.md
src/: main.cpp
src/animations/: button_morph.cpp  button_morph.hpp  chip_slide.cpp  chip_slide.hpp
src/assets/: asset_paths.hpp  loader.cpp  loader.hpp  registry.cpp  registry.hpp  texture.hpp  tier_config.hpp  tier_loader.cpp  tier_loader.hpp
src/audio/: audio.cpp  audio.hpp  audio_backend.cpp  audio_engine.hpp  audio_paths.hpp  backend.hpp  choreography.cpp  choreography.hpp  music.cpp  music.hpp  sfx.cpp  shuffle_pool.cpp  shuffle_pool.hpp
src/backbone/: animation_clock.cpp  animation_clock.hpp  animation_clock_stub.cpp  event_router.cpp  event_router.hpp  focus_manager.cpp  focus_manager.hpp  game_mode.hpp  modal_state.cpp  modal_state.hpp  modal_state_stub.cpp  scenario_events.cpp  scenario_events.hpp  screen_state.cpp  screen_state.hpp
src/bridge/: asset_image.hpp  auth_outcome.hpp  boot.cpp  boot.hpp  bridge_runtime.hpp  canvas_sizing.cpp  canvas_sizing.hpp  cdn_fetch.cpp  cdn_fetch.hpp  error_screen.cpp  error_screen.hpp  focus_reconcile.cpp  focus_registry.cpp  focus_registry.hpp  frame_tick.cpp  frame_tick.hpp  game_launch.cpp  game_launch.hpp  gl_renderer.cpp  gl_renderer.hpp  idbfs_backend.cpp  idbfs_backend.hpp  input_routing.cpp  input_routing.hpp  loading_screen.cpp  loading_screen.hpp  main_loop.cpp  main_loop.hpp  persistent_weights_store.cpp  persistent_weights_store.hpp  platform.cpp  platform.hpp  render_screens.cpp  screen_dispatch.cpp  screen_dispatch.hpp  service_worker.js  settings_persistence.cpp  settings_persistence.hpp  sfx_prefetch.cpp  sfx_prefetch.hpp  (+8 more)
src/easter_egg/: frog_toggle.cpp  frog_toggle.hpp
src/engine/: deck.cpp  deck.hpp  evaluator.cpp  evaluator.hpp  fold_function.cpp  fold_function.hpp  generator.cpp  generator.hpp  hand_eval.cpp  hand_eval.hpp  rng_seed.cpp  rng_seed.hpp  rng_util.hpp  scenario.hpp  scenario_id.cpp  scenario_id.hpp  side_pot.cpp  side_pot.hpp
src/math/: bet_size_buttons.cpp  bet_size_buttons.hpp  input_boxes.cpp  input_boxes.hpp  interrogator.hpp  keybinds.cpp  keybinds.hpp  submission.cpp  submission.hpp  tier_flow.cpp  tier_flow.hpp
src/modal/: auth_modals.cpp  auth_modals.hpp  cluster.cpp  confirm_modal.cpp  confirm_modal.hpp  help_modal.cpp  help_modal.hpp  leaderboard_view.cpp  leaderboard_view.hpp  modal_base.cpp  modal_base.hpp  modals.hpp  offline_indicator.cpp  offline_indicator.hpp  outage_banner.cpp  outage_banner.hpp  shop_view.cpp  shop_view.hpp
src/persistence/: auth.cpp  auth.hpp  auth0_backend.cpp  auth0_backend.hpp  auth0_config.hpp  clock.hpp  economy.cpp  economy.hpp  idbfs.cpp  idbfs.hpp  migration.cpp  migration.hpp  persistence_schema.hpp  persistence_service.cpp  persistence_service.hpp  supabase_backend.cpp  supabase_backend.hpp  supabase_config.hpp  sync.cpp  sync.hpp  sync_state.cpp  sync_state.hpp
src/render/: cards.cpp  cards.hpp  chips.cpp  chips.hpp  dealer.cpp  dealer.hpp  front_dealer.cpp  front_dealer.hpp  hud.cpp  hud.hpp  layout.hpp  opponents.cpp  opponents.hpp  render_constants.hpp  stat_modal.cpp  stat_modal.hpp  table.cpp  table.hpp
src/screens/: again_button.cpp  again_button.hpp  clipboard_fallback_modal.cpp  clipboard_fallback_modal.hpp  custom_popup.cpp  custom_popup.hpp  game_screen.cpp  game_screen.hpp  mode_selection_screen.cpp  mode_selection_screen.hpp  post_round_screen.cpp  post_round_screen.hpp  render_util.hpp  root_screen.cpp  root_screen.hpp  screen_registration.cpp  screen_registration.hpp
src/settings/: account_modal.cpp  account_modal.hpp  auth_form.cpp  auth_form.hpp  search.cpp  search.hpp  settings.hpp  settings_logic.hpp  settings_modal.cpp  settings_modal.hpp  username_denylist.cpp  username_denylist.hpp  username_denylist_data.hpp
src/temporal/: delta_timer.cpp  delta_timer.hpp  target_time.cpp  target_time.hpp  visual_countdown.cpp  visual_countdown.hpp
src/theme/: imgui_style_refresh.cpp  imgui_style_refresh.hpp  palette_no_limit.cpp  palette_ocean.cpp  palette_sage.cpp  palette_slate.cpp  palettes.hpp  theme.cpp  theme.hpp  theme_tokens.hpp
tests/: all_headers_test.cpp
tests/animations/: button_morph_test.cpp  chip_slide_test.cpp
tests/assets/: asset_test_util.hpp  loader_test.cpp  registry_test.cpp  tier_loader_test.cpp
tests/audio/: audio_engine_test.cpp  choreography_test.cpp  music_engine_test.cpp  shuffle_pool_test.cpp
tests/backbone/: animation_clock_test.cpp  event_router_test.cpp  focus_manager_test.cpp  scenario_events_test.cpp  screen_state_test.cpp
tests/bridge/: auth_outcome_test.cpp  canvas_sizing_test.cpp  focus_reconcile_test.cpp  frame_tick_test.cpp  game_launch_test.cpp  input_routing_test.cpp  loading_arc_test.cpp  screen_dispatch_test.cpp  settings_persistence_test.cpp  shared_scenario_test.cpp  tier_schedule_test.cpp
tests/easter_egg/: frog_toggle_test.cpp
tests/engine/: deck_test.cpp  evaluator_test.cpp  fold_function_test.cpp  generator_test.cpp  hand_eval_test.cpp  side_pot_test.cpp
tests/math/: input_boxes_test.cpp  keybinds_test.cpp  submission_test.cpp  tier_flow_test.cpp
tests/modal/: confirm_modal_test.cpp  leaderboard_view_test.cpp  modal_state_test.cpp  offline_indicator_test.cpp  outage_banner_test.cpp  shop_view_test.cpp
tests/persistence/: auth0_backend_test.cpp  auth_test.cpp  credentials_test.cpp  economy_test.cpp  idbfs_test.cpp  migration_test.cpp  persistence_mocks.hpp  serialization_test.cpp  supabase_backend_test.cpp  sync_test.cpp
tests/render/: cards_test.cpp  chips_test.cpp  opponents_test.cpp  stat_modal_test.cpp
tests/screens/: again_button_test.cpp  custom_popup_test.cpp  focus_lists_test.cpp  screen_registration_test.cpp
tests/settings/: auth_form_test.cpp  search_test.cpp  settings_logic_test.cpp  username_denylist_test.cpp
tests/temporal/: delta_timer_test.cpp  target_time_test.cpp  visual_countdown_test.cpp
tools/: gen_placeholders.cpp  placeholder_layout.hpp
(+4 files in other folders)
